# smart-campus-guide

./: .env.example  COMPLETE_GUIDE.md  CONSTANTS_IMPLEMENTATION_SUMMARY.md  DEPLOYMENT_GUIDE.md  Dockerfile  Procfile  README.md  README_STREAMLIT.md  chromadb.sh  college_dataset.csv  constants.py  deploy.sh  docker-compose.yml  example_usage.py  filter_extraction_agent.py  filter_models.py  main.py  pyproject.toml  rag_system.py  railway.toml  render.yaml  requirements-uv.txt  requirements.txt  setup.py  simplified_rag.py  start_app.sh  streamlit_app.py  test_constants.py  test_rag_mapping.py  test_state_region_extraction.py
.chromadb_autogen/: chroma.sqlite3
.streamlit/: config.toml
deployment/: CHROMADB_DEPLOYMENT.md  README.md
deployment/dashboard/: chromadb-dashboard.html  serve-dashboard-with-proxy.py
deployment/kubernetes/: chromadb-ingress.yaml  chromadb.yaml
deployment/scripts/: port-forward-chromadb.sh  start-chromadb-complete.sh  test_chromadb.py
docs/: CONSTANTS_IMPLEMENTATION_SUMMARY.md  ENVIRONMENT_VARIABLES.md
src/: constants.py
src/api/: __init__.py  enhanced_endpoints.py
src/rag/: filter_extraction_agent.py  filter_models.py  rag_system.py  simplified_rag.py
src/tests/: __init__.py  test_constants.py  test_constants_simple.py  test_pydantic_models.py  test_rag_integration.py
