[project]
name = "smart-campus-guide"
version = "0.1.0"
description = "Smart Campus Guide is an AI-powered, Retrieval Augmented Generation (RAG) based college recommendation system that uses vector search, LLMs, and FastAPI to help students make smarter academic choices."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "autogen>=0.9.6",
    "autogen-agentchat>=0.6.4",
    "autogen-ext[chromadb,openai]>=0.6.4",
    "chromadb>=1.0.15",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "numpy>=2.2.6",
    "openai>=1.97.0",
    "pandas>=2.3.1",
    "plotly>=5.17.0",
    "psutil>=5.9.0",
    "pydantic>=2.11.7",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.1",
    "requests>=2.31.0",
    "scikit-learn>=1.7.1",
    "sentence-transformers>=5.0.0",
    "streamlit>=1.28.0",
    "uvicorn>=0.35.0",
]
